# incpa

./: Cargo.toml  LICENSE  README-subcrate-link.md  README.md
byte/: Cargo.toml  Description.md
byte/src/: bufmgr.rs  lib.rs  parser.rs
compose/: Cargo.toml  Description.md
compose/src/: compose.rs  eitheror.rs  lib.rs  maperror.rs  mapoutput.rs  or.rs  then.rs
incpa/: Cargo.toml
incpa-tokio/: Cargo.toml
incpa-tokio/src/: byteparserext.rs  lib.rs
incpa/src/: byte.rs  byteparser.rs  compose.rs  lib.rs  literal.rs  parser.rs  parsing.rs  state.rs  testutils.rs
incpa/src/byte/: bufmgr.rs  parser.rs
incpa/src/combinators/: maperror.rs  mapoutput.rs  or.rs  then.rs
incpa/src/combinators/or/: parser.rs  tests.rs
incpa/src/combinators/then/: parser.rs  tests.rs
incpa/src/parsing/: backtrack.rs  bufmgr.rs  outcome.rs  state.rs
incpa/src/primitive/remaining/: tests.rs
incpa/src/state/: backtrack.rs  bufmgr.rs  resultimpls.rs
ioe/: Cargo.toml  Description.md
ioe/src/: impls.rs  input.rs  ioe.rs  lib.rs
parser/: Cargo.toml  Description.md
parser/src/: compimpls.rs  compose.rs  lib.rs  literal.rs  parser.rs  recursive.rs
parser/src/combinators/: maperror.rs  mapoutput.rs  or.rs  then.rs
parser/src/combinators/or/: parser.rs  tests.rs
parser/src/combinators/then/: parser.rs  tests.rs
parser/src/compimpls/: eitheror.rs  maperror.rs  mapoutput.rs  or.rs  then.rs
parser/src/compimpls/or/: tests.rs
parser/src/compimpls/then/: tests.rs
parser/src/compose/: maperror.rs  mapoutput.rs  or.rs  then.rs
parser/src/compose/or/: state.rs  tests.rs
parser/src/compose/then/: state.rs  tests.rs
parser/src/literal/: arrayimpl.rs  charimpl.rs  sliceimpl.rs  state.rs  strimpl.rs  tests.rs
parser/src/primitive/: remaining.rs
parser/src/primitive/remaining/: tests.rs
parser/src/recursive/: tests.rs
recursing/: Cargo.toml  Description.md
recursing/src/: continuation.rs  control.rs  lib.rs  recursive.rs  state.rs
recursion/: Cargo.toml
recursion/src/: cont.rs  lib.rs  parser.rs  prec.rs  recursion.rs  recursive.rs  state.rs  step.rs  tests.rs
recursive/: Cargo.toml
recursive/src/: arp.rs  continuation.rs  control.rs  cstate.rs  fimpls.rs  fstate.rs  intorecursing.rs  lib.rs  parser.rs  recstate.rs  recursing.rs  recursion.rs  recursive.rs  state.rs  status.rs  tests.rs
recursive/src/fimpls/: mapoutput.rs
recursive/src/intorecursing/: cstate.rs  fstate.rs  pir.rs
recursive/src/recursive/: parser.rs  state.rs
recursive/tests/: recursive_smoke_test.rs
src/: buffer.rs  byteparser.rs  combinator.rs  combinators.rs  compose.rs  error.rs  input.rs  lib.rs  literal.rs  map.rs  outcome.rs  outerr.rs  output.rs  parameterized.rs  parser.rs  parsing.rs  primitive.rs  recursive.rs  result.rs  resultimpls.rs  state.rs  syntax.rs  testutils.rs  update.rs
src/byteparser/: bufmgr.rs
src/combinators/: maperror.rs  mapoutput.rs  or.rs  then.rs
src/combinators/or/: parser.rs  state.rs  tests.rs
src/combinators/then/: parser.rs  state.rs  tests.rs
src/compose/: maperror.rs  mapoutput.rs  then.rs
src/compose/then/: state.rs  tests.rs
src/literal/: arrayimpl.rs  charimpl.rs  sliceimpl.rs  strimpl.rs  tests.rs
src/parsing/: backtrack.rs  buffer.rs  bufmgr.rs  byteparser.rs  parser.rs  resultimpls.rs  update.rs
src/parsing/byteparser/: bufmgr.rs
src/primitive/: remaining.rs
src/primitive/remaining/: tests.rs
src/recursive/: continuation.rs  innerstate.rs  parser.rs  recstate.rs  recursion.rs  state.rs  tests.rs
src/state/: backtrack.rs  buffer.rs  chomped.rs  outcome.rs  resultimpls.rs  update.rs
src/syntax/: byteformat.rs  literal.rs  maperror.rs  mapoutput.rs  or.rs  then.rs
src/syntax/literal/: arrayimpl.rs  charimpl.rs  sliceimpl.rs  strimpl.rs  tests.rs
src/syntax/or/: parser.rs  tests.rs
src/syntax/then/: parser.rs  tests.rs
state/: Cargo.toml  Description.md
state/src/: backtrack.rs  chomped.rs  compose.rs  dyn_state.rs  input.rs  lib.rs  state.rs
state/src/compose/: eitheror.rs  maperror.rs  mapoutput.rs  or.rs  then.rs
str/: Cargo.toml  Description.md
str/src/: lib.rs  strparser.rs  utf8.rs
tests/: recursive_smoke_test.rs
tokio/: Cargo.toml  Description.md
tokio/src/: byteparserext.rs  lib.rs
