[workspace.package]
# For now we have lockstepped versions across crates/requirements, at least for 0.0.x series:
version = "0.0.3"
edition = "2024"
license-file = "LICENSE"
homepage = "https://github.com/nejucomo/incpa"
repository = "https://github.com/nejucomo/incpa"

[workspace]
resolver = "3"
members = [
  ".",
  "byte",
  "str",
  "tokio",
]

# Note: this serves as a roster of all dependencies w/ versions, not only common dependencies.
[workspace.dependencies]
anyhow = "1.0.95"
derive_more = "2.0.1"
derive-new = "0.7.0"
either = "1.13.0"
test-case = "3.3.1"
thiserror = "2.0.9"
tokio = { version = "1.42.0", default-features = false }

# Local crates:
incpa = { path = ".", version = "0.0.3" }
incpa-byte = { path = "byte", version = "0.0.3" }

# incpa itself is in .:
[package]
name = "incpa"
description = "an INCremental PArser composition crate"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true, features = [ "from" ] }
derive-new.workspace = true
either.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
test-case.workspace = true
