[workspace.package]
# For now we have lockstepped versions across crates/requirements, at least for 0.0.x series:
version = "0.0.3"
edition = "2024"
license-file = "LICENSE"
homepage = "https://github.com/nejucomo/incpa"
repository = "https://github.com/nejucomo/incpa"

[workspace]
resolver = "3"
members = [
  "byte",
  "incpa",
  "parser",
  "recursive",
  "state",
  "str",
  "tokio",
]

# Note: this serves as a roster of all dependencies w/ versions, not only common dependencies.
[workspace.dependencies]
anyhow = "1.0.95"
derive_more = "2.0.1"
derive-new = "0.7.0"
either = "1.13.0"
test-case = "3.3.1"
thiserror = "2.0.9"
tokio = { version = "1.42.0", default-features = false }

# Local crates:
incpa = { path = "incpa", version = "0.0.3" }
incpa-byte = { path = "byte", version = "0.0.3" }
incpa-parser = { path = "parser", version = "0.0.3" }
incpa-recursive = { path = "recursive", version = "0.0.3" }
incpa-state = { path = "state", version = "0.0.3" }
incpa-str = { path = "str", version = "0.0.3" }
incpa-tokio = { path = "tokio", version = "0.0.3" }
