[package]
name = "incpa-byte"
description = "byte-oriented parsing and input for `incpa` parsers"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
incpa-state.workspace = true
incpa-parser.workspace = true
