[package]
name = "incpa-tokio"
description = "Support for `tokio` in `incpa` parsers."
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
incpa.workspace = true
incpa-byte.workspace = true
tokio = { workspace = true, default-features = false, features = ["io-util"] }
