[package]
name = "incpa"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
incpa-byte.workspace = true
incpa-compose.workspace = true
incpa-ioe.workspace = true
incpa-parser.workspace = true
incpa-state.workspace = true
incpa-str.workspace = true
incpa-tokio.workspace = true
paste.workspace = true
