[package]
name = "incpa-str"
description = "str-oriented parsing and input for `incpa` parsers`"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from"] }
incpa-state.workspace = true
incpa.workspace = true
thiserror.workspace = true
