[package]
name = "incpa-str"
description = "str-oriented parsing and input for `incpa` parsers`"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from"] }
incpa-ioe.workspace = true
incpa-parser.workspace = true
incpa-state.workspace = true
thiserror.workspace = true
